--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,37 @@
 {
     "files.associations": {
-        "functional": "cpp"
+        "functional": "cpp",
+        "thread": "cpp",
+        "*.tcc": "cpp",
+        "slist": "cpp",
+        "chrono": "cpp",
+        "sstream": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "cstdint": "cpp",
+        "exception": "cpp",
+        "optional": "cpp",
+        "type_traits": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "limits": "cpp",
+        "memory": "cpp",
+        "new": "cpp",
+        "ratio": "cpp",
+        "stdexcept": "cpp",
+        "tuple": "cpp",
+        "typeinfo": "cpp",
+        "utility": "cpp"
     }
 }
